--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.4",
-    "node-fetch": "^2.6.0",
-    "x-ray": "^2.3.3",
+    "express": "^4.17.1",
+    "fetch-h2": "^2.2.2",
     "ssl-root-cas": "^1.3.1",
-    "fetch-h2": "^2.2.2"
+    "x-ray": "^2.3.4"
   },
   "engines": {
     "node": "12.x"
   },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
-  },
+  "repository": {},
   "license": "MIT",
   "keywords": [
     "node",
